Fixed spacing and added abcscore style that was missed

--- a/css/default.css
+++ b/css/default.css
@@ -221,3 +221,7 @@ img {
 img[src$='.svg'] {
     max-width: 100%;
 }
+
+.abcscore {
+    width: 100%;
+}
